--- a/charts/chart.mustache
+++ b/charts/chart.mustache
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Line Chart</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
       canvas{
         -moz-user-select: none;
@@ -13,15 +13,11 @@
   </head>
 
   <body>
-    <div style="width:75%;">
-      <canvas id="canvas"></canvas>
-    </div>
+    <div id="tester" style="top:1rem;bottom:1rem;left:1rem;right:1rem;position:absolute;"></div>
     <script>
-      let config = {{&chartConfig}}
-      window.onload = function() {
-        var ctx = document.getElementById("canvas").getContext("2d");
-        window.myLine = new Chart(ctx, config);
-      };
+      const data = {{&chartData}}
+      const layout = {{&chartLayout}}
+      Plotly.plot(document.getElementById('tester'), data, layout);
     </script>
   </body>
 </html>
