--- a/charts/chart.mustache
+++ b/charts/chart.mustache
@@ -17,7 +17,9 @@
     <script>
       const data = {{&chartData}}
       const layout = {{&chartLayout}}
-      Plotly.plot(document.getElementById('tester'), data, layout);
+      Plotly.plot(document.getElementById('tester'), data, layout, {
+        scrollZoom: true
+      });
     </script>
   </body>
 </html>
